--- a/ChengYuDaHuiGame/res/layout/activity_main_menu.xml
+++ b/ChengYuDaHuiGame/res/layout/activity_main_menu.xml
@@ -30,74 +30,29 @@
             android:paddingBottom="5dp"
             android:paddingTop="5dp" >
 
-            <RelativeLayout
+            <ImageView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" >
+                android:layout_weight="1"
+                android:clickable="true"
+                android:onClick="launchChengYuStudy"
+                android:src="@drawable/main_menu_chengyucidian_selector" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:src="@drawable/bg_main_menu_1" />
-
-                <TextView
-                    android:layout_width="25dp"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:clickable="true"
-                    android:onClick="launchChengYuStudy"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
-                    android:text="@string/study_every_day"
-                    android:textSize="15sp" />
-            </RelativeLayout>
-
-            <RelativeLayout
+            <ImageView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" >
+                android:layout_weight="1"
+                android:clickable="true"
+                android:onClick="launchPictureGuessGame"
+                android:src="@drawable/main_menu_zhishichuangguan_selector" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:src="@drawable/bg_main_menu_1" />
-
-                <TextView
-                    android:layout_width="25dp"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:clickable="true"
-                    android:onClick="launchSpeakGuessGame"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
-                    android:text="@string/game_by_speak"
-                    android:textSize="15sp" />
-            </RelativeLayout>
-
-            <RelativeLayout
+            <ImageView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" >
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:src="@drawable/bg_main_menu_1" />
-
-                <TextView
-                    android:layout_width="25dp"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:clickable="true"
-                    android:onClick="launchPictureGuessGame"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
-                    android:text="看图猜成语"
-                    android:textSize="15sp" />
-            </RelativeLayout>
+                android:layout_weight="1"
+                android:clickable="true"
+                android:onClick="launchChengYuStudy"
+                android:src="@drawable/main_menu_hanzitingxie_selector" />
         </LinearLayout>
 
         <LinearLayout
@@ -109,71 +64,29 @@
             android:paddingBottom="5dp"
             android:paddingTop="5dp" >
 
-            <RelativeLayout
+            <ImageView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" >
+                android:layout_weight="1"
+                android:clickable="true"
+                android:onClick="launchPictureGuessGame"
+                android:src="@drawable/main_menu_chengyudahui_selector" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:src="@drawable/bg_main_menu_1" />
-
-                <TextView
-                    android:layout_width="25dp"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:clickable="true"
-                    android:onClick="launchChengYuNewComment"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
-                    android:text="成语新解"
-                    android:textSize="15sp" />
-            </RelativeLayout>
-
-            <RelativeLayout
+            <ImageView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" >
+                android:layout_weight="1"
+                android:clickable="true"
+                android:onClick="launchChengYuStudy"
+                android:src="@drawable/main_menu_shuishiwodi_selector" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:src="@drawable/bg_main_menu_1" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:clickable="true"
-                    android:onClick="launchChengYuStudy"
-                    android:src="@drawable/icon_apk" />
-            </RelativeLayout>
-
-            <RelativeLayout
+            <ImageView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" >
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:src="@drawable/bg_main_menu_1" />
-
-                <TextView
-                    android:layout_width="25dp"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:clickable="true"
-                    android:onClick="launchJifen"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
-                    android:text="@string/get_score"
-                    android:textSize="15sp" />
-            </RelativeLayout>
+                android:layout_weight="1"
+                android:clickable="true"
+                android:onClick="launchJifen"
+                android:src="@drawable/main_menu_lingqufenglu_selector" />
         </LinearLayout>
     </LinearLayout>
 
