--- a/ChengYuDaHuiGame/res/layout/speak_game_layout.xml
+++ b/ChengYuDaHuiGame/res/layout/speak_game_layout.xml
@@ -60,187 +60,188 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/mode_select_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/title_speak"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="90dip"
+        android:background="@drawable/activity_middle" >
+
+        <Button
+            android:id="@+id/local_mode"
+            android:layout_width="300dip"
+            android:layout_height="75dip"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="10dip"
+            android:background="@drawable/list_click_item_selector"
+            android:text="@string/local_mode"
+            android:layout_above="@+id/internet_mode"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/internet_mode"
+            android:layout_width="300dip"
+            android:layout_height="75dip"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="10dip"
+            android:background="@drawable/list_click_item_selector"
+            android:text="@string/internet_mode"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/mode_setting_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/title_speak"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="90dip"
+        android:background="@drawable/activity_middle"
+        android:visibility="gone" >
+
+        <Button
+            android:id="@+id/speak_game_start"
+            android:layout_width="300dip"
+            android:layout_height="75dip"
+            android:layout_above="@+id/speak_game_time_setting"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dip"
+            android:background="@drawable/list_click_item_selector"
+            android:text="@string/start_game"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/speak_game_time_setting"
+            android:layout_width="300dip"
+            android:layout_height="75dip"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="10dip"
+            android:background="@drawable/list_click_item_selector"
+            android:text="@string/speak_time_setting"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/local_game_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/title_speak"
         android:layout_marginBottom="10dip"
-        android:background="@drawable/activity_middle" >
+        android:background="@drawable/activity_middle"
+        android:visibility="gone" >
 
-        <RelativeLayout
-            android:id="@+id/mode_select_layout"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/count_down"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true" >
-
-            <Button
-                android:id="@+id/local_mode"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="10dip"
-                android:background="@drawable/list_click_item_selector"
-                android:text="@string/local_mode"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/internet_mode"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/local_mode"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dip"
-                android:background="@drawable/list_click_item_selector"
-                android:text="@string/internet_mode"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-        </RelativeLayout>
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dip"
+            android:background="@drawable/short_btn_bg_selector"
+            android:text="@string/count_down_sample"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <RelativeLayout
-            android:id="@+id/mode_setting_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:visibility="gone" >
-
-            <Button
-                android:id="@+id/speak_game_start"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="10dip"
-                android:background="@drawable/list_click_item_selector"
-                android:text="@string/start_game"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/speak_game_time_setting"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/speak_game_start"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dip"
-                android:background="@drawable/list_click_item_selector"
-                android:text="@string/speak_time_setting"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/local_game_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone" >
-
-            <TextView
-                android:id="@+id/count_down"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="10dip"
-                android:background="@drawable/short_btn_bg_selector"
-                android:text="@string/count_down_sample"
-                android:textSize="25sp"
-                android:textStyle="bold" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/count_down" >
-
-                <TextView
-                    android:id="@+id/speak_chengyu_game_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:background="@drawable/short_btn_bg_selector"
-                    android:textSize="60sp"
-                    android:textStyle="bold" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/speak_chengyu_game_name"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="30dip"
-                    android:orientation="vertical" >
-
-                    <RelativeLayout
-                        android:layout_width="200dip"
-                        android:layout_height="50dip" >
-
-                        <ImageView
-                            android:id="@+id/speak_game_next"
-                            android:layout_width="200dip"
-                            android:layout_height="50dip"
-                            android:clickable="true"
-                            android:scaleType="fitXY"
-                            android:src="@drawable/short_btn_bg_selector" />
-
-                        <TextView
-                            android:id="@+id/tv_next_speak"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:text="@string/game_next"
-                            android:textColor="@android:color/black"
-                            android:textSize="20sp"
-                            android:textStyle="bold" />
-                    </RelativeLayout>
-
-                    <RelativeLayout
-                        android:layout_width="200dip"
-                        android:layout_height="50dip"
-                        android:layout_marginTop="10dip" >
-
-                        <ImageView
-                            android:id="@+id/speak_game_right"
-                            android:layout_width="200dip"
-                            android:layout_height="50dip"
-                            android:clickable="true"
-                            android:scaleType="fitXY"
-                            android:src="@drawable/short_btn_bg_selector" />
-
-                        <TextView
-                            android:id="@+id/tv_right_speak"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:text="@string/game_right"
-                            android:textColor="@android:color/black"
-                            android:textSize="20sp"
-                            android:textStyle="bold" />
-                    </RelativeLayout>
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/info_for_chengyu"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_margin="5dip"
-                    android:background="@drawable/short_btn_bg_selector"
-                    android:textSize="16sp" />
-            </RelativeLayout>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/internet_game_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone" >
+            android:layout_below="@+id/count_down" >
 
             <TextView
-                android:id="@+id/internet_count_down"
+                android:id="@+id/speak_chengyu_game_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/short_btn_bg_selector"
-                android:text="@string/count_down_sample"
-                android:textSize="25sp"
+                android:textSize="60sp"
                 android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/speak_chengyu_game_name"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="30dip"
+                android:orientation="vertical" >
+
+                <RelativeLayout
+                    android:layout_width="200dip"
+                    android:layout_height="50dip" >
+
+                    <ImageView
+                        android:id="@+id/speak_game_next"
+                        android:layout_width="200dip"
+                        android:layout_height="50dip"
+                        android:clickable="true"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/short_btn_bg_selector" />
+
+                    <TextView
+                        android:id="@+id/tv_next_speak"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="@string/game_next"
+                        android:textColor="@android:color/black"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="200dip"
+                    android:layout_height="50dip"
+                    android:layout_marginTop="10dip" >
+
+                    <ImageView
+                        android:id="@+id/speak_game_right"
+                        android:layout_width="200dip"
+                        android:layout_height="50dip"
+                        android:clickable="true"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/short_btn_bg_selector" />
+
+                    <TextView
+                        android:id="@+id/tv_right_speak"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="@string/game_right"
+                        android:textColor="@android:color/black"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/info_for_chengyu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="5dip"
+                android:background="@drawable/short_btn_bg_selector"
+                android:textSize="16sp" />
         </RelativeLayout>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/internet_game_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" >
+
+        <TextView
+            android:id="@+id/internet_count_down"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/short_btn_bg_selector"
+            android:text="@string/count_down_sample"
+            android:textSize="25sp"
+            android:textStyle="bold" />
     </RelativeLayout>
 
 </RelativeLayout>
